[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texas_bot"
version = "1.0.0"
description = "Telegram bot ذكي لخماسي"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.14,<4.0"

dependencies = [
    "aiogram>=3.3.0,<3.4.0",
    "asyncpg>=0.28.0,<0.29.0",
    "aiohttp>=3.9.3,<3.10.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytz>=2023.3"
]
